# haystack-workshop-2025

./: .gitignore  .gitmodules  Earnings_Call_Ingestion_Script.ipynb  Makefile  QuestionAnsweringNotebook.ipynb  README.md  Rag.ipynb  error_messages.py  hml-test-query.ipynb  ingestion_notebook2.ipynb  ingestion_tutorial.ipynb  pyproject.toml  qa_tutorial.ipynb  s3_download_list.txt  s3_download_list_http.txt  workshop_nb_1.ipynb  workshop_nb_2.ipynb  workshop_nb_3.ipynb  workshop_nb_4.ipynb
scripts/: download_data.py  download_materialize.py
