[project]
name = "aryn-haystack"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9.2, <3.13"
dependencies = [
    "aryn-sdk>=0.2.0",
    "devtools>=0.12.2",
    "jupyterlab>=4.3.6",
    "rich[jupyter]>=13.9.4",
    "sycamore-ai[local-inference]",
]

[tool.uv.sources]
sycamore-ai = { path = "sycamore/lib/sycamore", editable = true }
